--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -436,7 +436,7 @@ endif()
 # Find BLAS library
 if(COMPILE_CPU)
   if(NOT GENERATE_MARIAN_INSTALL_TARGETS)
-    set(EXT_LIBS ${EXT_LIBS} intgemm) # Enable intgemm when compiling CPU #ccl
+    set(EXT_LIBS ${EXT_LIBS} intgemm ccl) # Enable intgemm when compiling CPU #
     add_definitions(-DCOMPILE_CPU=1)
   endif()
   if(USE_APPLE_ACCELERATE)
